...
                        Icons.attach_money,
                        color: Colors.purple[400],
                        size: 28,
                      ),
                      const SizedBox(width: 12),
                      const Text(
                        'Sell Products',
                        style: TextStyle(
                          fontSize: 24,
                          fontWeight: FontWeight.bold,
                          color: Colors.white,
                        ),
                      ),
...
